fix: make the clear button show visible focus indicator

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -493,6 +493,10 @@ button.nav-link[aria-disabled='true'] {
   outline: 3px solid var(--blue-mid);
 }
 
+.ais-SearchBox-reset:focus {
+  outline: 3px solid var(--blue-mid);
+}
+
 .ais-SearchBox-submit:focus:not(:focus-visible) {
   outline: none;
 }
